--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -14,3 +14,11 @@ jobs:
         with:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          SHOW_LINES_OF_CODE: true
+          SHOW_PROFILE_VIEWS: false
+          SHOW_DAYS_OF_WEEK: false
+          SHOW_OS: false
+          SHOW_PROJECTS: false
+          SHOW_TIMEZONE: false
+          SHOW_LANGUAGE_PER_REPO: false
+          SHOW_LOC_CHART: false
