update wakatime yaml

--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -17,7 +17,7 @@ jobs:
           SHOW_LINES_OF_CODE: true
           SHOW_PROFILE_VIEWS: false
           SHOW_DAYS_OF_WEEK: false
-          SHOW_OS: false
+          SHOW_OS: true
           SHOW_PROJECTS: false
           SHOW_TIMEZONE: false
           SHOW_LANGUAGE_PER_REPO: false
