--- a/.github/recent-activity.config.yml
+++ b/.github/recent-activity.config.yml
@@ -7,10 +7,14 @@ on:
 
 jobs:
   build:
+    name: Update README with recent activity
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+    - name: Checkout repo
+        uses: actions/checkout@v2.3.4
+
+    - name: Add activity to readme
       - uses: Readme-Workflows/recent-activity@v2.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
