--- a/.github/workflows/recent-activity-config.yml
+++ b/.github/workflows/recent-activity-config.yml
@@ -18,3 +18,5 @@ jobs:
       - uses: Readme-Workflows/recent-activity@v2.2.0
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          CONFIG_FILE: './github/recent-activity-config.yml'
