--- a/.github/workflows/recent-activity-config.yml
+++ b/.github/workflows/recent-activity-config.yml
@@ -16,4 +16,4 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          CONFIG_FILE: './github/workflows/recent-activity-config.yml'
+          CONFIG_FILE: './.github/workflows/recent-activity-config.yml'
