--- a/.github/workflows/waka-readme.yml
+++ b/.github/workflows/waka-readme.yml
@@ -15,7 +15,7 @@ jobs:
           WAKATIME_API_KEY: ${{ secrets.WAKATIME_API_KEY }}
           GH_TOKEN: ${{ secrets.GH_TOKEN }}
           SHOW_TOTAL_CODE_TIME: false
-          SHOW_LINES_OF_CODE: true
+          SHOW_LINES_OF_CODE: false
           SHOW_PROFILE_VIEWS: false
           SHOW_DAYS_OF_WEEK: false
           SHOW_OS: true
